--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/breeze": "^1.25",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.4.4",
@@ -47,6 +46,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "up": [
+            "vendor/bin/sail up -d"
+        ],
+        "down": [
+            "vendor/bin/sail down"
         ]
     },
     "extra": {
